<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText android:id="@+id/textfield1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/text_field"
       android:textColor="#000"
      
       android:textStyle="italic|bold"
        />

    <EditText
        android:id="@+id/textfield2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button1"
        android:layout_marginTop="35dp"
        android:layout_toLeftOf="@+id/Button1"
        android:ems="10"
         android:textColor="#000"
      
       android:textStyle="italic|bold"
        android:hint="@string/text_field2" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textfield1"
        android:layout_marginLeft="39dp"
        android:layout_toRightOf="@+id/textfield1"
        android:hint="@string/button_text" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textfield2"
        android:layout_alignBottom="@+id/textfield2"
        android:layout_alignLeft="@+id/Button1"
        android:hint="@string/button_text2" />

    <EditText
        android:id="@+id/textfield3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Button3"
        android:layout_toLeftOf="@+id/Button1"
        android:ems="10"
         android:textColor="#000"
      
       android:textStyle="italic|bold"
        android:hint="@string/text_field3" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button2"
        android:layout_below="@+id/Button2"
        android:layout_marginTop="30dp"
        android:hint="@string/button_text3" />
    
</RelativeLayout>
